Table account {
  id uuid [pk, ref: < project.accountId]
  userName varchar [unique]
  fullName varchar
  dateCreated timestamp
  userType varchar
}

Table project {
  id uuid [pk , ref: < content.projectItemId]
  accountId uuid
  contentType varchar
  name varchar
  isActive boolean
  created timestamp
  published timestamp
}

Table content {
  id uuid [pk]
  type varchar
  title varchar
  body varchar
  properties jsonb
  projectItemId uuid
}
